--- a/frontEnd_Componente/ngx-admin/src/app/pages/mesas/listar/listar.component.html
+++ b/frontEnd_Componente/ngx-admin/src/app/pages/mesas/listar/listar.component.html
@@ -8,8 +8,7 @@
         </nb-card-header>
         <table class="table">
             <tr>
-                <th *ngFor="let columaActual of nombresColumnas">
-                    {{columaActual}}
+                <th *ngFor="let columaActual of nombresColumnas">{{columaActual}}
                 </th>
             </tr>
             
